# MultiThreaded-Calculator

./: CMakeLists.txt  MultiThreadCalculator.c  README.md
